@@ -33,6 +33,8 @@ v0.6.0, 2017-04-?? -- ???
  * removed deprecated functions:
    * mrjob.parse:
      * is_windows_path()
+     * iso8601_to_timestamp()
+     * iso8601_to_datetime()
      * parse_key_value_list()
      * parse_port_range_list()
    * mrjob.util:
